--- a/snippets/package.json
+++ b/snippets/package.json
@@ -11,6 +11,10 @@
         "path": "./typescript.json"
       },
       {
+        "language": "svelte",
+        "path": "./svelte.json"
+      },
+      {
         "language": [
           "md",
           "markdown"
